[package]
name = "cts-csv"
version = "0.1.1"
edition = "2024"
authors = ["tanghy <tanghy@cloudthink.space>"]
homepage = "https://www.cloudthink.space"
publish = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/CloudThinkSpace/cts-csv"
rust-version = "1.89.0"
description = "read or write csv files"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.225", features = ["derive"] }
